@@ -7,6 +7,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.AnalyzerClient;
 import ru.practicum.CollectorClient;
 import ru.practicum.category.Category;
 import ru.practicum.category.CategoryRepository;
@@ -14,6 +15,7 @@ import ru.practicum.event.dto.*;
 import ru.practicum.event.params.AdminEventsParam;
 import ru.practicum.event.params.PublicEventsParam;
 import ru.practicum.event.repository.EventRepository;
+import ru.practicum.ewm.stats.proto.RecommendedEventProto;
 import ru.practicum.exception.ConditionsNotMetException;
 import ru.practicum.exception.NotFoundException;
 import ru.practicum.exception.ValidationException;
@@ -38,6 +40,7 @@ import java.util.stream.Collectors;
 public class EventServiceImpl implements EventService {
 
     private final CollectorClient collectorClient;
+    private final AnalyzerClient analyzerClient;
     private final EventRepository eventRepository;
     private final UserClient userClient;
     private final CategoryRepository categoryRepository;
@@ -60,20 +63,20 @@ public class EventServiceImpl implements EventService {
         }
         Pageable pageable = PageRequest.of(from, size, Sort.by("eventDate"));
         List<Event> events = eventRepository.findByInitiatorId(initiatorId, pageable).getContent();
-        Map<Long, Long> views = getViews(events);
+        Map<Long, Double> ratings = getRatings(events);
         List<EventShortDto> eventsShortDto = new ArrayList<>();
         for (Event event : events) {
             UserShortDto userShortDto = userClient.getUserDto(event.getInitiatorId());
             EventShortDto eventShortDto = EventMapper.toShortDto(event, userShortDto);
             eventsShortDto.add(eventShortDto);
         }
-//        for (EventShortDto event : eventsShortDto) {
-//            if (views.get(event.getId()) != null) {
-//                event.setViews(views.get(event.getId()));
-//            } else {
-//                event.setViews(0L);
-//            }
-//        }
+        for (EventShortDto event : eventsShortDto) {
+            if (ratings.get(event.getId()) != null) {
+                event.setRating(ratings.get(event.getId()));
+            } else {
+                event.setRating(0.0);
+            }
+        }
         Set<Long> eventIds = events
                 .stream()
                 .map(Event::getId)
@@ -117,7 +120,7 @@ public class EventServiceImpl implements EventService {
         Event savedEvent = eventRepository.save(event);
         UserShortDto userDto = userClient.getUserDto(initiatorId);
         EventFullDto eventFullDto = EventMapper.toFullDto(savedEvent, userDto);
-//        eventFullDto.setViews(0L);
+        eventFullDto.setRating(0.0);
         eventFullDto.setConfirmedRequests(0L);
         log.info("Создано событие с ID: {}", savedEvent.getId());
 
@@ -134,14 +137,13 @@ public class EventServiceImpl implements EventService {
         }
         UserShortDto userDto = userClient.getUserDto(initiatorId);
         EventFullDto eventFullDto = EventMapper.toFullDto(event,  userDto);
-        List<String> uris = new ArrayList<>();
-        uris.add("/events/" + eventId);
-//        Long views = statsClient.getStats(LocalDateTime.now().minusYears(1), LocalDateTime.now().plusDays(1), uris, true)
-//                .stream()
-//                .map(ViewStatsDto::getHits)
-//                .findFirst()
-//                .orElse(0L);
-//        eventFullDto.setViews(views);
+        List<Event> events = new ArrayList<>();
+        events.add(event);
+        Double rating = getRatings(events).entrySet().stream()
+                .map(Map.Entry::getValue)
+                .findFirst()
+                .orElse(0.0);
+        eventFullDto.setRating(rating);
 
         eventFullDto.setConfirmedRequests(getConfirmedRequestsCount(eventId));
 
@@ -208,14 +210,13 @@ public class EventServiceImpl implements EventService {
         Event updatedEvent = eventRepository.save(oldEvent);
         UserShortDto userDto = userClient.getUserDto(initiatorId);
         EventFullDto eventFullDto = EventMapper.toFullDto(updatedEvent, userDto);
-        List<String> uris = new ArrayList<>();
-        uris.add("/events/" + eventId);
-//        Long views = statsClient.getStats(LocalDateTime.now().minusYears(1), LocalDateTime.now().plusDays(1), uris, true)
-//                .stream()
-//                .map(ViewStatsDto::getHits)
-//                .findFirst()
-//                .orElse(0L);
-//        eventFullDto.setViews(views);
+        List<Event> events = new ArrayList<>();
+        events.add(updatedEvent);
+        Double rating = getRatings(events).entrySet().stream()
+                .map(Map.Entry::getValue)
+                .findFirst()
+                .orElse(0.0);
+        eventFullDto.setRating(rating);
 
         eventFullDto.setConfirmedRequests(getConfirmedRequestsCount(eventId));
 
@@ -285,14 +286,13 @@ public class EventServiceImpl implements EventService {
         Event updatedEvent = eventRepository.save(oldEvent);
         UserShortDto userDto = userClient.getUserDto(updatedEvent.getInitiatorId());
         EventFullDto eventFullDto = EventMapper.toFullDto(updatedEvent, userDto);
-        List<String> uris = new ArrayList<>();
-        uris.add("/events/" + eventId);
-//        Long views = statsClient.getStats(LocalDateTime.now().minusYears(1), LocalDateTime.now().plusDays(1), uris, true)
-//                .stream()
-//                .map(ViewStatsDto::getHits)
-//                .findFirst()
-//                .orElse(0L);
-//        eventFullDto.setViews(views);
+        List<Event> events = new ArrayList<>();
+        events.add(updatedEvent);
+        Double rating = getRatings(events).entrySet().stream()
+                .map(Map.Entry::getValue)
+                .findFirst()
+                .orElse(0.0);
+        eventFullDto.setRating(rating);
 
         eventFullDto.setConfirmedRequests(getConfirmedRequestsCount(eventId));
 
@@ -314,7 +314,7 @@ public class EventServiceImpl implements EventService {
         if (events.isEmpty()) {
             throw new ValidationException("Запрос составлен некорректно");
         }
-        Map<Long, Long> views = getViews(events);
+        Map<Long, Double> ratings = getRatings(events);
         List<EventShortDto> eventsShortDto = new ArrayList<>();
         for (Event event : events) {
             UserShortDto userShortDto = userClient.getUserDto(event.getInitiatorId());
@@ -322,11 +322,11 @@ public class EventServiceImpl implements EventService {
             eventsShortDto.add(eventShortDto);
         }
         for (EventShortDto event : eventsShortDto) {
-//            if (views.get(event.getId()) != null) {
-//                event.setViews(views.get(event.getId()));
-//            } else {
-//                event.setViews(0L);
-//            }
+            if (ratings.get(event.getId()) != null) {
+                event.setRating(ratings.get(event.getId()));
+            } else {
+                event.setRating(0.0);
+            }
         }
         Set<Long> eventIds = events
                 .stream()
@@ -340,11 +340,11 @@ public class EventServiceImpl implements EventService {
                 event.setConfirmedRequests(0L);
             }
         }
-//        if (publicEventsParam.getSort() == SortEvents.VIEWS) {
-//            return eventsShortDto.stream()
-//                    .sorted(Comparator.comparing(EventShortDto::getViews).reversed())
-//                    .collect(Collectors.toList());
-//        }
+        if (publicEventsParam.getSort() == SortEvents.RATINGS) {
+            return eventsShortDto.stream()
+                    .sorted(Comparator.comparing(EventShortDto::getRating).reversed())
+                    .collect(Collectors.toList());
+        }
         return eventsShortDto;
     }
 
@@ -358,7 +358,7 @@ public class EventServiceImpl implements EventService {
                         event -> event.getId(),
                         Function.identity()
                 ));
-        Map<Long, Long> views = getViews(events);
+        Map<Long, Double> ratings = getRatings(events);
         List<EventFullDto> eventsFullDto = new ArrayList<>();
         for (Event event : events) {
             UserShortDto userFullDto = userClient.getUserDto(event.getInitiatorId());
@@ -366,11 +366,11 @@ public class EventServiceImpl implements EventService {
             eventsFullDto.add(eventFullDto);
         }
         for (EventFullDto event : eventsFullDto) {
-//            if (views.get(event.getId()) != null) {
-//                event.setViews(views.get(event.getId()));
-//            } else {
-//                event.setViews(0L);
-//            }
+            if (ratings.get(event.getId()) != null) {
+                event.setRating(ratings.get(event.getId()));
+            } else {
+                event.setRating(0.0);
+            }
         }
         Set<Long> eventIds = events
                 .stream()
@@ -397,14 +397,13 @@ public class EventServiceImpl implements EventService {
         }
         UserShortDto userDto = userClient.getUserDto(event.getInitiatorId());
         EventFullDto eventFullDto = EventMapper.toFullDto(event, userDto);
-        List<String> uris = new ArrayList<>();
-        uris.add("/events/" + eventId);
-//        Long views = statsClient.getStats(LocalDateTime.now().minusYears(1), LocalDateTime.now().plusDays(1), uris, true)
-//                .stream()
-//                .map(ViewStatsDto::getHits)
-//                .findFirst()
-//                .orElse(0L);
-//        eventFullDto.setViews(views);
+        List<Event> events = new ArrayList<>();
+        events.add(event);
+        Double rating = getRatings(events).entrySet().stream()
+                .map(Map.Entry::getValue)
+                .findFirst()
+                .orElse(0.0);
+        eventFullDto.setRating(rating);
 
         eventFullDto.setConfirmedRequests(getConfirmedRequestsCount(eventId));
 
@@ -431,12 +430,13 @@ public class EventServiceImpl implements EventService {
         Event updatedEvent = eventRepository.save(event);
         UserShortDto userDto = userClient.getUserDto(updatedEvent.getInitiatorId());
         EventFullDto eventFullDto = EventMapper.toFullDto(updatedEvent, userDto);
-//        Long views = statsClient.getStats(LocalDateTime.now().minusYears(1), LocalDateTime.now().plusDays(1), uris, true)
-//                .stream()
-//                .map(ViewStatsDto::getHits)
-//                .findFirst()
-//                .orElse(0L);
-//        eventFullDto.setViews(views);
+        List<Event> events = new ArrayList<>();
+        events.add(updatedEvent);
+        Double rating = getRatings(events).entrySet().stream()
+                .map(Map.Entry::getValue)
+                .findFirst()
+                .orElse(0.0);
+        eventFullDto.setRating(rating);
 
         eventFullDto.setConfirmedRequests(getConfirmedRequestsCount(eventId));
 
@@ -462,22 +462,18 @@ public class EventServiceImpl implements EventService {
         return EventMapper.toInternalDto(event);
     }
 
-    Map<Long, Long> getViews(List<Event> events) {
-//        if (events == null || events.isEmpty()) {
+    Map<Long, Double> getRatings(List<Event> events) {
+        if (events == null || events.isEmpty()) {
             return new HashMap<>();
-//        }
-//        Map<String, Long> uris = events
-//                .stream()
-//                .collect(Collectors.toMap(
-//                        currentEvent -> "/events/" + currentEvent.getId(),
-//                        Event::getId)
-//                );
-//        return statsClient.getStats(LocalDateTime.now().minusYears(1), LocalDateTime.now().plusDays(1), uris.keySet().stream().toList(), true)
-//                .stream()
-//                .collect(Collectors.toMap(
-//                        currentViewStatDto -> uris.get(currentViewStatDto.getUri()),
-//                        ViewStatsDto::getHits)
-//                );
+        }
+        List<Long> eventIds = events.stream()
+                .map(Event::getId)
+                .collect(Collectors.toList());
+
+        return analyzerClient.getInteractionsCount(eventIds).toList().stream()
+                .collect(Collectors.toMap(
+                        RecommendedEventProto::getEventId,
+                        RecommendedEventProto::getScore));
     }
 
     private Map<Long, Long> getConfirmedRequestsForEvents(Set<Long> eventIds) {
